# uav_perception_nav

./: .gitignore  .gitmodules  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_CHEATSHEET.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  COMPLETION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PACKAGE_RENAME_SUMMARY.md  QUICK_REFERENCE.md  README.md  UNIFIED_NODE_ARCHITECTURE.md  test_simple.py
docs/: 2D_TRANSITION_COMPLETION_SUMMARY.md  2D_TRANSITION_PLAN.md  ACCEPTANCE_CHECKLIST.md  ARCHITECTURE.md  DEBUG_VALIDATION_FLOW.md  FOXGLOVE_VALIDATION_LAYOUT.md  INDEX.md  INSTALLATION.md  MASTER_DEBUGGING_GUIDE.md  MID360_FAST_LIO2_INTEGRATION.md  NAV_STACK_QUICK_START.md  OAKD_PRO_W_VINS_CALIBRATION.md  ODOMETRY_FUSION_GUIDE.md  OMNI_BRINGUP.md  PX4_NAVIGATION_STRATEGY.md  PX4_STATE_MACHINE_DESIGN.md  QUICK_REFERENCE.md  README.md  SENSOR_DEBUG_GUIDE.md  SUBMODULE_PATCH_REPRODUCTION.md  SYSTEM_INTEGRATION_TEST.md  TF_FRAMES.md  VERIFICATION_SUMMARY.txt  VINS_FUSION_CONFIG_TODO.md  VISUALIZATION_GUIDE.md  W2_D10_D11_BEHAVIORAL_TEST_PLAN.md  W2_D8_D9_COMPLETION_SUMMARY.md
src/ground_serial_bridge/: package.xml  setup.cfg  setup.py
src/ground_serial_bridge/config/: ground_serial_bridge.yaml
src/ground_serial_bridge/ground_serial_bridge/: ground_serial_bridge_node.py  platform_state_machine.py  serial_protocol.py
src/ground_serial_bridge/test/: test_platform_state_machine.py  test_serial_protocol.py
src/nav_local/: README.md  package.xml  setup.cfg  setup.py
src/nav_local/config/: default.yaml
src/nav_local/launch/: nav_local.launch.py
src/nav_local/nav_local/: __init__.py  local_map_builder.py  local_planner.py  px4_offboard_ctrl.py  safety_monitor.py
src/nav_local/test/: test_imports.py
src/px4_comm_bridge/: README.md  package.xml  setup.cfg  setup.py
src/px4_comm_bridge/config/: px4_comm_bridge.yaml
src/px4_comm_bridge/docs/: QGC_SETUP_GUIDE.md
src/px4_comm_bridge/px4_comm_bridge/: __init__.py  control_bridge.py  converters.py  data_bridge.py  fake_px4_sensors.py  fake_vio_odometry.py  px4_bridge_node.py  px4_mock_node.py  px4_state_machine.py
src/px4_comm_bridge/test/: test_converters.py  test_state_machine_verification.py
(+138 files in other folders)
