[metadata]
name = nav_local
version = 0.0.0

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    nav_msgs
    geometry_msgs
    std_msgs

[options.entry_points]
console_scripts =
    local_map_builder = nav_local.local_map_builder:main
    local_planner = nav_local.local_planner:main
    px4_offboard_ctrl = nav_local.px4_offboard_ctrl:main
    safety_monitor = nav_local.safety_monitor:main
