<?xml version="1.0"?>
<package format="3">
  <name>px4_comm_bridge</name>
  <version>0.1.0</version>
  <description>Bridge between PX4 (px4_msgs) and standard ROS2 topics for robot_localization and planners.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>px4_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
